; ModuleID = '/home/carl/AnghaBench/redis/deps/jemalloc/test/unit/extr_decay.c_generate_dirty.c'
source_filename = "/home/carl/AnghaBench/redis/deps/jemalloc/test/unit/extr_decay.c_generate_dirty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MALLOCX_TCACHE_NONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i64)* @generate_dirty to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @generate_dirty(i32 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i64 %1, i64* %4, align 8
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @MALLOCX_ARENA(i32 %7)
  %9 = load i32, i32* @MALLOCX_TCACHE_NONE, align 4
  %10 = or i32 %8, %9
  store i32 %10, i32* %5, align 4
  %11 = load i64, i64* %4, align 8
  %12 = load i32, i32* %5, align 4
  %13 = call i8* @do_mallocx(i64 %11, i32 %12)
  store i8* %13, i8** %6, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @dallocx(i8* %14, i32 %15)
  ret void
}

declare dso_local i32 @MALLOCX_ARENA(i32) #1

declare dso_local i8* @do_mallocx(i64, i32) #1

declare dso_local i32 @dallocx(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
